feat: added layout in all other component

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,4 +17,11 @@ a {
 
 .container {
     text-align: center;
+    padding-bottom: 60px;
+}
+.content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
